# server

./: .pre-commit-config.yaml  .release-please-config-stable.json  .release-please-manifest-dev.json  .release-please-manifest.json  DEVELOPMENT.md  Dockerfile  Dockerfile.base  README.md  mypy.ini  pyproject.toml  release-please-config-dev.json  requirements_all.txt
.github/: pr-labels.yaml  release-drafter.yml
.github/workflows/: .release-please-config-dev.json  .release-please-config-stable.json  .release-please-manifest-dev.json  build-base-image.yml  release-drafter-dev.yml  release-drafter-stable.yml  release-drafter.yml  release-please-dev.yml  release-please-stable.yml  release.yml  test.yml
music_assistant/: __init__.py  __main__.py  constants.py  mass.py
music_assistant/common/models/: queue_item.py
music_assistant/controllers/: cache.py  config.py  metadata.py  music.py  player_queues.py  players.py  streams.py  webserver.py
music_assistant/controllers/media/: albums.py  artists.py  audiobooks.py  base.py  playlists.py  podcasts.py  radio.py  tracks.py
music_assistant/helpers/: api.py  app_vars.py  audio.py  auth.py  compare.py  database.py  didl_lite.py  dsp.py  ffmpeg.py  images.py  playlists.py  process.py  tags.py  throttle_retry.py  uri.py  util.py  webserver.py
music_assistant/models/: __init__.py  core_controller.py  metadata_provider.py  music_provider.py  player_provider.py  plugin.py  provider.py
music_assistant/providers/_template_music_provider/: __init__.py
music_assistant/providers/_template_player_provider/: __init__.py  manifest.json
music_assistant/providers/_template_plugin_provider/: __init__.py
music_assistant/providers/airplay/: __init__.py  const.py  helpers.py  manifest.json  player.py  provider.py  raop.py
music_assistant/providers/apple_music/: __init__.py
music_assistant/providers/audible/: __init__.py  audible_helper.py  manifest.json
music_assistant/providers/audiobookshelf/: __init__.py  abs_client.py  abs_schema.py  constants.py  helpers.py  manifest.json  parsers.py
music_assistant/providers/audioscrobbler/: __init__.py  manifest.json
music_assistant/providers/bluesound/: __init__.py  manifest.json
music_assistant/providers/builtin/: __init__.py
music_assistant/providers/chromecast/: __init__.py
music_assistant/providers/deezer/: __init__.py  gw_client.py
music_assistant/providers/dlna/: __init__.py  helpers.py  manifest.json
music_assistant/providers/fanarttv/: __init__.py
music_assistant/providers/filesystem_local/: __init__.py  constants.py  helpers.py
music_assistant/providers/filesystem_smb/: __init__.py
music_assistant/providers/fully_kiosk/: __init__.py
music_assistant/providers/hass/: __init__.py  constants.py
music_assistant/providers/hass_players/: __init__.py
music_assistant/providers/ibroadcast/: __init__.py  manifest.json
music_assistant/providers/itunes_podcasts/: README.md  __init__.py  manifest.json  parsers.py  schema.py
music_assistant/providers/jellyfin/: __init__.py  const.py  manifest.json  parsers.py
music_assistant/providers/lastfm/: __init__.py  manifest.json
music_assistant/providers/musicbrainz/: __init__.py
music_assistant/providers/opensubsonic/: __init__.py  parsers.py  sonic_provider.py
music_assistant/providers/player_group/: __init__.py  ugp_stream.py
music_assistant/providers/plex/: __init__.py  helpers.py  manifest.json
music_assistant/providers/podcastfeed/: __init__.py  manifest.json
music_assistant/providers/qobuz/: __init__.py
music_assistant/providers/radiobrowser/: __init__.py
music_assistant/providers/siriusxm/: __init__.py
music_assistant/providers/slimproto/: __init__.py  multi_client_stream.py
music_assistant/providers/snapcast/: __init__.py  manifest.json
music_assistant/providers/sonos/: __init__.py  const.py  manifest.json  player.py  provider.py
music_assistant/providers/sonos_s1/: __init__.py  helpers.py  manifest.json  player.py
music_assistant/providers/soundcloud/: __init__.py  manifest.json
music_assistant/providers/spotify/: __init__.py  helpers.py
music_assistant/providers/spotify_connect/: __init__.py  events.py  manifest.json
music_assistant/providers/test/: __init__.py
music_assistant/providers/theaudiodb/: __init__.py
music_assistant/providers/tidal/: __init__.py  helpers.py  manifest.json
music_assistant/providers/tunein/: __init__.py
music_assistant/providers/ytmusic/: __init__.py  helpers.py  manifest.json
music_assistant/server/: server.py
music_assistant/server/controllers/: metadata.py  music.py  player_queues.py  players.py
music_assistant/server/controllers/media/: base.py
music_assistant/server/helpers/: audio.py  images.py
music_assistant/server/providers/chromecast/: __init__.py  manifest.json
music_assistant/server/providers/dlna/: __init__.py
music_assistant/server/providers/opensubsonic/: manifest.json  sonic_provider.py
music_assistant/server/providers/radiobrowser/: manifest.json
music_assistant/server/providers/snapcast/: __init__.py
music_assistant/server/providers/sonos/: provider.py
scripts/: gen_requirements_all.py  profiler.py  setup.sh
tests/: common.py  conftest.py
tests/core/: __init__.py  test_compare.py  test_helpers.py  test_radio_stream_title.py  test_server_base.py  test_tags.py
tests/providers/filesystem/: test_helpers.py
tests/providers/jellyfin/: test_init.py  test_parsers.py
tests/providers/jellyfin/__snapshots__/: test_parsers.ambr
tests/providers/jellyfin/fixtures/tracks/: do_i_wanna_know.json
tests/providers/opensubsonic/: __init__.py  test_parsers.py
tests/providers/opensubsonic/__snapshots__/: test_parsers.ambr
tests/providers/opensubsonic/fixtures/artists/: spec-artistid3.artist.json  spec-sample.artist.json
